# video-summarizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: RUNBOOK.md  USAGE.md  frontmatter-proposal.md  skill-packaging-proposal.md
docs/superpowers/plans/: 2026-06-16-media-acquisition.md  2026-06-16-richer-summary.md  2026-06-16-video-summarizer.md  2026-06-16-visual-media-resolution.md  2026-06-16-whisper-language.md
docs/superpowers/specs/: 2026-06-16-media-acquisition-design.md  2026-06-16-richer-summary-design.md  2026-06-16-video-analysis-pipeline-design.md  2026-06-16-visual-media-resolution-design.md  2026-06-16-whisper-language-design.md
plugin/.claude-plugin/: plugin.json
plugin/skills/summarize-video/: SKILL.md
src/video_summarizer/: __init__.py  acquire.py  cli.py  errors.py  render.py  summarize.py  transcribe.py  visual.py
tests/: test_acquire.py  test_cli.py  test_render.py  test_summarize.py  test_transcribe.py  test_visual.py
