[project]
name = "video-summarizer"
version = "0.1.0"
description = "Turn a video into a structured markdown: transcript + summary + chapters + optional visual notes."
requires-python = ">=3.11"
dependencies = ["google-genai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
video-summarizer = "video_summarizer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
